# MAKIAVELLI

./: .clang-format  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  README.md
images/: CMakeLists.txt  blue_country.aseprite  cards.aseprite  image.aseprite  red_country.aseprite  small_parts.aseprite
json_files/: CMakeLists.txt  json_files.qrc  locations.json  points.json  resources.json
raw/: blue_country.aseprite  brown country.aseprite
src/: CMakeLists.txt  main.cpp
src/Card_Bank/: CMakeLists.txt  card.cpp  card.hpp  card_bank.cpp  card_bank.hpp  cards.json
src/Concurrency/: CMakeLists.txt  concurrency.hpp
src/Country/: CMakeLists.txt  ResLocPoi.cpp  ResLocPoi.hpp  activity_points.cpp  activity_points.hpp  cards.cpp  cards.hpp  cards_holder.cpp  cards_holder.hpp  country.cpp  country.hpp  locations.cpp  locations.hpp  locations.json  points.cpp  points.hpp  points.json  resources.cpp  resources.hpp  resources.json
src/GUI/: CMakeLists.txt  GUI.cpp  GUI.hpp  TESTDUMMY.h.in  player_gui.hpp  server_gui.hpp
src/GUI/Game_Window/: CMakeLists.txt  game_window.cpp  game_window.h  game_window.ui
src/GUI/Launch_Window/: CMakeLists.txt  launch_window.cpp  launch_window.h  launch_window.ui  launch_window.ui.autosave
src/GUI/Launch_Window/Client/: CMakeLists.txt  client.cpp  client.h  client.ui
src/GUI/Launch_Window/Client/Client_Connector/: CMakeLists.txt  client_connector.cpp  client_connector.h  client_connector.ui
src/GUI/Launch_Window/Client/Client_Waiting/: CMakeLists.txt  client_waiting.cpp  client_waiting.h  client_waiting.ui
src/GUI/Launch_Window/Client_Launch/: CMakeLists.txt  client_launch.cpp  client_launch.h  client_launch.ui
src/GUI/Launch_Window/Client_Launch/Client_GUI/: CMakeLists.txt  cg_images.qrc  client_gui.cpp  client_gui.h  client_gui.ui  images.qrc
src/GUI/Launch_Window/Client_Launch/Client_GUI/Player_Dashboard/: CMakeLists.txt  pd_images.qrc  player_dashboard.cpp  player_dashboard.h  player_dashboard.ui
src/GUI/Launch_Window/Server/: CMakeLists.txt  server.cpp  server.h  server.ui
src/GUI/Launch_Window/Server/Server_Constructor/: CMakeLists.txt  server_constructor.cpp  server_constructor.h  server_constructor.ui
src/GUI/Launch_Window/Server/Server_Creating/: CMakeLists.txt  server_creating.cpp  server_creating.h  server_creating.ui
src/GUI/Launch_Window/Server/Server_Waiting/: CMakeLists.txt  server_waiting.cpp  server_waiting.h  server_waiting.ui
src/GUI/Launch_Window/Server_Launch/: CMakeLists.txt  server_launch.cpp  server_launch.h  server_launch.ui
src/GUI/Launch_Window/Server_Launch/Server/: CMakeLists.txt  server.cpp  server.h  server.ui  server_GUI.cpp  server_GUI.h
src/GUI/Launch_Window/Server_Launch/Server_Creating/: CMakeLists.txt  server_creating.cpp  server_creating.h  server_creating.ui  server_creating.ui.autosave
src/GUI/Launch_Window/Server_Launch/Server_GUI/: CMakeLists.txt  server_gui.cpp  server_gui.h  server_gui.ui
src/GUI/Main_Window/: CMakeLists.txt  main_window.cpp  main_window.h  main_window.ui
src/GUI/Player_Window/: CMakeLists.txt  player_window.cpp  player_window.h  player_window.ui
src/Game/: CMakeLists.txt  game_factory.cpp  game_factory.hpp
src/Game_Factory/: CMakeLists.txt  game_factory.cpp  game_factory.hpp  json_files.qrc
src/Game_Factory/json_files/: CMakeLists.txt  cards.json  locations.json  points.json  resources.json
src/Map/: CMakeLists.txt  map.cpp  map.hpp  map_cell.cpp  map_cell.hpp
src/Networking/: CMakeLists.txt  game_client.cpp  game_client.hpp  game_network.hpp  game_server.cpp  game_server.hpp  player_client.cpp  player_client.hpp  text_message.cpp  text_message.hpp
